manifest/image-provider/templates/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: image-provider
  labels:
    app.kubernetes.io/name: image-provider
    app.kubernetes.io/part-of: astronomy-shop
spec:
  replicas: 1
  strategy:
    canary:
      maxSurge: 1
      maxUnavailable: 0
      steps:
        - setWeight: 100
  selector:
    matchLabels:
      app.kubernetes.io/name: image-provider
  template:
    metadata:
      labels:
        app.kubernetes.io/name: image-provider
        app.kubernetes.io/part-of: astronomy-shop
    spec:
      serviceAccountName: image-provider
      containers:
        - name: image-provider
          image: REPLACE_ME/image-provider:REPLACE_ME
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
