manifest/image-provider/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-provider
  labels:
    app.kubernetes.io/name: image-provider
    app.kubernetes.io/part-of: astronomy-shop
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: image-provider
  ports:
    - name: http
      port: 8081
      targetPort: http
